# goodlinks-mcp

./: .gitignore  .mcpbignore  LICENSE  README.md  manifest.json  pyproject.toml
src/goodlinks_mcp/: __init__.py  client.py  server.py
