[project]
name = "goodlinks-mcp"
version = "0.2.0"
description = "MCP server for the GoodLinks read-it-later app"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Glenn Faulkner" },
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
goodlinks-mcp = "goodlinks_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goodlinks_mcp"]
